add cxx standard

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,4 +40,5 @@ SET(CMAKE_CXX_FLAGS "-std=c++17 -Wall -O3 -fPIC -fpermissive")
 # Make configuration
 #**************************************************************************************************
 add_executable(uws ${SOURCES})
+set_property(TARGET uws PROPERTY CXX_STANDARD 17)
 target_link_libraries(uws -pthread -lstdc++fs ${USOCKETS_LIB} ZLIB::ZLIB)
