--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -41,6 +41,8 @@ jobs:
         cd vcpkg
         ./bootstrap-vcpkg.sh
         ./vcpkg install libuv:${{ matrix.config.triplet }} uwebsockets:${{ matrix.config.triplet }} cxxopts:${{ matrix.config.triplet }}
+    - name: check vcpkg
+      run: ./vcpkg list
     - name: cmake
       run: cmake . -DCMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake" -DVCPKG_TARGET_TRIPLET=${{ matrix.config.triplet }}
     - name: make
