feat(ci): update cmake and ci

--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -1,3 +1,4 @@
+
 name: C++ CI
 
 on:
@@ -16,22 +17,20 @@ jobs:
         config:
         - os: ubuntu-latest
           triplet: "x64-linux"
-          artifact: uws
           compiler: g++-9
-          build_type: "Release"
         - os: windows-latest
           triplet: "x64-windows"
-          artifact: Release
-          build_type: "Release"
 
     runs-on: ${{ matrix.config.os }}
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: 'true'
     - name: Install (gcc-9) (Linux)
       if: runner.os == 'Linux'
       run: |
-        echo "::set-env name=CXX::${{ matrix.config.compiler }}"
+        echo "CXX=${{ matrix.config.compiler }}" >> $GITHUB_ENV
     - name: vcpkg
       shell: bash
       run: |
@@ -45,10 +44,10 @@ jobs:
         cd vcpkg
         ./vcpkg list
     - name: cmake
-      run: cmake . -DCMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake" -DVCPKG_TARGET_TRIPLET=${{ matrix.config.triplet }}
-    - name: make
-      run: cmake --build . --config ${{ matrix.config.build_type }}
+      run: cmake . -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake" -DVCPKG_TARGET_TRIPLET=${{ matrix.config.triplet }} -DCMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE=Artifact
+    - name: build
+      run: cmake --build . --config Release
     - uses: actions/upload-artifact@v1
       with:
         name: http-server-${{ matrix.config.triplet }}
-        path: ${{ matrix.config.artifact }}
+        path: Artifact
